Fix Playwright bundling issues for deployment
- Separate Playwright code into server-only file
- Add webpack configuration to exclude Playwright from client bundle
- Fix TypeScript errors in Supabase client
- Add vercel.json for deployment configuration
- Mark API routes as server-only with runtime flags

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,30 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# tauri
+src-tauri/target/
+src-tauri/Cargo.lock
+
+# rust
+**/*.rs.bk
+**/target/
+
+# environment variables
+.env.local
+.env*.local
+
+# os
+.DS_Store
+Thumbs.db
+
+# ide
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# logs
+*.log
+logs/
